@@ -1,6 +1,7 @@
 Changes in Release 1.2.0
 =============================================
 * [JOWS-8] - Allow a filter to be attached to a Resource
+* Add new constructor to filesystem-related resource provider that can take file: URIs
 
 Changes in Release 1.1.0
 =============================================
